Add vim-prettier submodule to vim pack

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "vim/vim/pack/plugins/start/vimwiki"]
+[submodule "conf/vim/vim/pack/plugins/start/vimwiki"]
 	path = vim/vim/pack/plugins/start/vimwiki
 	url = https://github.com/vimwiki/vimwiki
-[submodule "rbenv"]
-	path = rbenv
-	url = https://github.com/rbenv/rbenv
-[submodule "vim/vim/pack/plugins/start/syntastic"]
+[submodule "conf/vim/vim/pack/plugins/start/syntastic"]
 	path = vim/vim/pack/plugins/start/syntastic
 	url = https://github.com/vim-syntastic/syntastic
+[submodule "conf/vim/vim/pack/plugins/start/vim-prettier"]
+	path = conf/vim/vim/pack/plugins/start/vim-prettier
+	url = git@github.com:prettier/vim-prettier.git
