Add and configure coc-explorer extension. Specify jsonlint in ALE

--- a/conf/coc/coc-settings.json
+++ b/conf/coc/coc-settings.json
@@ -1,23 +1,25 @@
 {
+  "explorer.width": 30,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
+  "explorer.keyMappings": {
+    "<cr>": ["expandable?", "expand", "open"],
+    "v": "open:vsplit"
+  },
   "languageserver": {
     "haskell": {
-       "command": "hie-wrapper",
-       "args": ["--lsp"],
-       "rootPatterns": [
-         "*.cabal",
-         "stack.yaml",
-         "cabal.project",
-         "package.yaml"
-       ],
-       "filetypes": [
-         "hs",
-         "lhs",
-         "haskell"
-       ],
-       "initializationOptions": {
-         "languageServerHaskell": {
-         }
-       }
+      "command": "hie-wrapper",
+      "args": ["--lsp"],
+      "rootPatterns": [
+        "*.cabal",
+        "stack.yaml",
+        "cabal.project",
+        "package.yaml"
+      ],
+      "filetypes": ["hs", "lhs", "haskell"],
+      "initializationOptions": {
+        "languageServerHaskell": {}
+      }
     }
   }
 }
