--- a/conf/coc/coc-settings.json
+++ b/conf/coc/coc-settings.json
@@ -1,6 +1,6 @@
 {
-  "explorer.width": 30,
-  "explorer.icon.enableNerdfont": true,
+  "explorer.width": 40,
+  "explorer.icon.enableNerdfont": false,
   "explorer.previewAction.onHover": false,
   "explorer.keyMappings": {
     "<cr>": ["expandable?", "expand", "open"],
