--- a/conf/tmux/tmux.conf
+++ b/conf/tmux/tmux.conf
@@ -22,3 +22,4 @@ set-option -g allow-rename off
 # increase scrollback lines
 set -g history-limit 10000
 
+set-option -ag status-right "%H:%M %d-%b-%y"
