Enable mouse scrolling in tmux pane

--- a/conf/tmux/tmux.conf
+++ b/conf/tmux/tmux.conf
@@ -22,4 +22,8 @@ set-option -g allow-rename off
 # increase scrollback lines
 set -g history-limit 10000
 
+# specify datetime format in right-side of status bar
 set-option -ag status-right "%H:%M %d-%b-%y"
+
+# capture mouse events (e.g. scrolling)
+set -g mouse on
