--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ conf/zsh/zshrc_extended
 # coc
 conf/coc/
 !conf/coc/coc-settings.json
+conf/vim/vimruntime/pack/plugins/start/coc.nvim-release/
 
 # kaggle
 conf/kaggle/kaggle.json
