--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "conf/vim/vimruntime/pack/colorschemes/opt/onedark.vim"]
 	path = conf/vim/vimruntime/pack/colorschemes/opt/onedark.vim
 	url = https://github.com/joshdick/onedark.vim
+[submodule "conf/vim/vimruntime/pack/plugins/start/vim-fugitive"]
+	path = conf/vim/vimruntime/pack/plugins/start/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive
