--- a/conf/coc/coc-settings.json
+++ b/conf/coc/coc-settings.json
@@ -13,9 +13,22 @@
       "filetypes": ["sh"],
       "ignoredRootPaths": ["~"]
     },
+    "ccls": {
+      "command": "ccls",
+      "filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
+      "rootPatterns": [".ccls-root", "compile_commands.json"],
+      "initializationOptions": {
+        "cache": {
+          "directory": ".ccls-cache"
+        },
+        "client": {
+          "snippetSupport": true
+        }
+      }
+    },
     "terraform": {
       "command": "terraform-lsp",
-      "filetypes": ["terraform", "tf"],
+      "filetypes": ["terraform", "tf", "tfvars"],
       "initializationOptions": {},
       "settings": {}
     },
