Update windows/pkg_install.ps1 and tmux.conf

--- a/conf/tmux/tmux.conf
+++ b/conf/tmux/tmux.conf
@@ -27,3 +27,6 @@ set-option -ag status-right "%H:%M %d-%b-%y"
 
 # capture mouse events (e.g. scrolling)
 set -g mouse on
+
+# Enable utf8
+set-window-option -g utf8 on
