Fix xml syntax bug in packages.config

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -20,7 +20,7 @@
   <package id="joplin" />
   <package id="keepassxc" />
   <package id="kindle"
-	   version="1.17" >
+	  version="1.17" />
   <package id="libreoffice-fresh" />
   <package id="mendeley" />
   <package id="microsoft-windows-terminal" />
@@ -42,4 +42,4 @@
            version="6.1.26" />
   <package id="vscodium" />
   <package id="zoom" />
-<packages/>
+</packages>
