--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="7zip" />
+  <package id="anki" />
   <package id="brave" />
   <package id="chocolateygui" />
   <package id="calibre"
