Add powershell script to pin chocolatey packages

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="7zip" />
+  <package id="androidstudio" />
   <package id="brave" />
   <package id="chocolateygui" />
   <package id="calibre"
@@ -17,10 +18,10 @@
   <package id="gh" />
   <package id="git" />
   <package id="graphviz" />
+  <package id="intellijidea-community" />
   <package id="joplin" />
+  <package id="javaruntime" />
   <package id="keepassxc" />
-  <package id="kindle"
-	  version="1.17" />
   <package id="libreoffice-fresh" />
   <package id="mendeley" />
   <package id="microsoft-windows-terminal" />
@@ -37,6 +38,7 @@
   <package id="syncthing" />
   <package id="texstudio" />
   <package id="vagrant" />
+  <!-- required for WSL2 GUI interaction on win10 -->
   <package id="vcxsrv" />
   <package id="virtualbox"
            version="6.1.26" />
