Add itunes to chocolatey packages

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -20,6 +20,7 @@
   <package id="git" />
   <package id="graphviz" />
   <package id="intellijidea-community" />
+  <package id="itunes" />
   <package id="joplin" />
   <package id="javaruntime" />
   <package id="keepassxc" />
