--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -46,5 +46,6 @@
   <package id="virtualbox"
            version="6.1.26" />
   <package id="vscodium" />
+  <package id="yed" />
   <package id="zoom" />
 </packages>
