--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -37,8 +37,7 @@
   <package id="signal" />
   <package id="slack" />
   <package id="steam-client" />
-  <package id="syncthing"
-           version="1.19.2" />
+  <package id="syncthing" />
   <package id="texstudio" />
   <package id="vagrant" />
   <!-- required for WSL2 GUI interaction on win10 -->
