Add thunderbird to chocolatey packages

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -39,6 +39,7 @@
   <package id="steam-client" />
   <package id="syncthing" />
   <package id="texstudio" />
+  <package id="thunderbird" />
   <package id="vagrant" />
   <!-- required for WSL2 GUI interaction on win10 -->
   <package id="vcxsrv" />
