Add minimal chocolatey package configuration

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -23,6 +23,7 @@
   <package id="itunes" />
   <package id="joplin" />
   <package id="javaruntime" />
+  <package id="kdenlive" />
   <package id="keepassxc" />
   <package id="libreoffice-fresh" />
   <package id="mendeley" />
@@ -38,6 +39,7 @@
   <package id="slack" />
   <package id="steam-client" />
   <package id="syncthing" />
+  <package id="teamviewer" />
   <package id="texstudio" />
   <package id="thunderbird" />
   <package id="vagrant" />
