Add gnucash to package lists

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -44,6 +44,7 @@ brew 'zsh-syntax-highlighting'
 cask 'drawio'
 cask 'firefox'
 cask 'flux'
+cask 'gnucash'
 cask 'keepassxc'
 cask 'postman'
 cask 'slack'
