--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -18,6 +18,7 @@
   <package id="gimp" />
   <package id="gh" />
   <package id="git" />
+  <package id="gnucash" />
   <package id="graphviz" />
   <package id="intellijidea-community" />
   <package id="itunes" />
