Update windows packages and tasks

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="7zip" />
+  <package id="awscli" />
   <package id="androidstudio" />
   <package id="anki" />
+  <package id="audacity" />
   <package id="brave" />
   <package id="chocolateygui" />
   <package id="calibre"
