--- a/windows/chocolatey/packages.minimal.config
+++ b/windows/chocolatey/packages.minimal.config
@@ -11,5 +11,6 @@
   <package id="git" />
   <package id="itunes" />
   <package id="keepassxc" />
+  <package id="signal" />
   <package id="syncthing" />
 </packages>
