Replace pinning packages via script with config option

--- a/windows/chocolatey/packages.config
+++ b/windows/chocolatey/packages.config
@@ -8,7 +8,8 @@
   <package id="brave" />
   <package id="chocolateygui" />
   <package id="calibre"
-           version="4.23.0" />
+           version="4.23.0"
+           pinPackage="true" />
   <package id="cryptomator" />
   <package id="drawio" />
   <package id="docker-desktop" />
@@ -16,7 +17,8 @@
   <package id="ffmpeg" />
   <package id="firefox" />
   <package id="foxitreader"
-           version="11.1.0.52543" />
+           version="11.1.0.52543"
+           pinPackage="true" />
   <package id="gimp" />
   <package id="gh" />
   <package id="git" />
@@ -49,7 +51,8 @@
   <!-- required for WSL2 GUI interaction on win10 -->
   <package id="vcxsrv" />
   <package id="virtualbox"
-           version="6.1.26" />
+           version="6.1.26"
+           pinPackage="true" />
   <package id="vscodium" />
   <package id="yed" />
   <package id="zeal" />
